# mosaic

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dev-environment.txt  dev-environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_workflow.yml  docs_workflow.yml
_sources/: index.md
_sources/developers_guide/: api.md
_sources/user_guide/: quick_start.md  wrapping.md
_static/: custom.css
developers_guide/: api.html  quick_start.html
docs/: conf.py  index.md
docs/developers_guide/: api.md  design_docs.md  quick_start.md
docs/developers_guide/design_docs/: contouring.ipynb
docs/user_guide/: contouring.ipynb  periodic_mesh_support.md  quick_start.md  spherical_mesh_support.md  wrapping.md
mosaic/: __init__.py  contour.py  datasets.py  descriptor.py  mpas_collection.py  pcolor.py  polypcolor.py  utils.py  version.py
tests/: test_contour.py  test_contour_graph.py  test_planar_periodic.py  test_polypcolor.py  test_spherical.py  test_utils.py
user_guide/: periodic_mesh_support.html  quick_start.html  spherical_mesh_support.html  wrapping.html
utils/logo/: .gitignore  Makefile  mosaic_logo.cfg  mosaic_logo.py
