[project]
name = "mosaic"
dynamic = ["version"]
authors = [
  { name="E3SM Development Team", email="anolan@lanl.gov" },
]
description = "A visualization package for MPAS meshes"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "cartopy",
    "cmocean",
    "h5netcdf",
    "netcdf4",
    "matplotlib",
    "numpy",
    "pooch",
    "pyproj",
    "scipy",
    "tqdm",
    "xarray",
]

[project.optional-dependencies]
docs = [
    # building documentation
    "sphinx",
    "myst-parser",
    "sphinx-book-theme",
]

dev = [
    # linting and testing
    "pip",
    "isort",
    "flynt",
    "flake8",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = true
force_grid_wrap = "0"
use_parentheses = true
line_length = "79"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.setuptools.dynamic]
version = { attr = "mosaic.version.__version__" }
